catkin_ws/logs/px4_offboard/build.make.015.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘void tagCallback(geometry_msgs::PoseArray)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:48:24: error: ‘const value_type’ has no member named ‘empty’
   if(tag_pose.poses[0].empty()){
                        ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make: *** [all] Error 2
